Fix alignment if main menu doesn’t exist

--- a/src/ui/public/kbn_top_nav/_kbn_top_nav.scss
+++ b/src/ui/public/kbn_top_nav/_kbn_top_nav.scss
@@ -1,3 +1,7 @@
+/**
+ * 1. Make sure the timepicker is always one right, even if the main menu doesn't exist
+ */
+
 .kbnTopNav {
   background-color: $euiColorLightestShade;
   border-bottom: $euiBorderThin;
@@ -6,16 +10,12 @@
 .kbnTopNav__row {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  // flex-wrap: wrap;
-  // justify-content: flex-end;
-}
-
-.kuiLocalNavRow__section {
-  flex-grow: 1;
+  justify-content: flex-end; /* 1 */
 }
 
 .kbnTopNav__mainMenu {
+  flex-grow: 1; /* 1 */
+
   &:empty {
     // Make sure the area doesn't take up any space if it is empty
     padding: 0;
